--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,10 +31,17 @@
             android:minHeight="48dp"
             android:text="#056589" />
 
+        <com.skydoves.colorpickerview.ColorPickerView
+            android:id="@+id/colorPickerView"
+            android:layout_width="300dp"
+            android:layout_height="300dp" >
+
+        </com.skydoves.colorpickerview.ColorPickerView>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal" >
+            android:layout_height="59dp"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/inputR"
@@ -65,7 +72,20 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:text="255" />
+
         </LinearLayout>
+
+        <Button
+            android:id="@+id/addColorButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ajouter" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
