--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:text="#056589" />
+            android:text="#ffffff" />
 
         <com.skydoves.colorpickerview.ColorPickerView
             android:id="@+id/colorPickerView"
