--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -12,5 +12,6 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:elevation="2dp"
-        android:layout_weight="10" />
+        android:layout_weight="10"
+        android:layout_margin="10dp"/>
 </LinearLayout>
