--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -5,8 +5,7 @@
     android:orientation="horizontal"
     android:layout_margin="10dp"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/buttonColor"
