--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="185"
+                android:text="255"
                 android:textAlignment="center"
                 android:textColor="#d9d9d9"
                 android:textSize="20sp"
@@ -146,7 +146,7 @@
                 android:id="@+id/inputG"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:text="185"
+                android:text="255"
                 android:layout_gravity="center"
 
                 android:textAlignment="center"
@@ -170,7 +170,7 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="185"
+                android:text="255"
                 android:textAlignment="center"
                 android:textColor="#d9d9d9"
                 android:textSize="20sp"
@@ -204,6 +204,10 @@
             android:elevation="5dp"
             android:layout_weight="3"
             android:background="@drawable/more"
+            android:scrollbars="vertical"
+
+            android:fadeScrollbars="false"
+            android:scrollbarThumbVertical="@drawable/scrollbar"
             />
         <LinearLayout
             android:layout_width="match_parent"
